--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     display: flex;
     border: 0px;
     background-color: #1f2937;
+   
     
 }
 
@@ -24,11 +25,12 @@
   padding: 14px 16px;
   text-decoration: none;
   font-size: 20px;
+  
 
 
 }
 .nav-bar a:hover{
-background-color: aqua;
+background-color: rgb(202, 201, 195);
 color: black;
 }
 .first-pic{
@@ -38,15 +40,23 @@ color: black;
     width: 400px;
     height: 400px;
     float: right;
+   padding-top: 70px;
+   padding-bottom: 50px;
+    
 
 }
 h1{
     font-weight: bold;
     color:whitesmoke;
     float: left;
-    font-family: Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background-color: #614f4f;
+    border-radius: 25px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 h2{
+
     display: flex;
     border: 10px;
     height: 150px;
@@ -88,7 +98,8 @@ button{
 
 }
 button:hover {
-    background-color:red ;
+    background-color:rgb(202, 201, 195);
+    color: black;
 }
 button:active {
     transform: translateY(2px);
