--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-html{
+/*html{
     overflow-y: scroll; overflow-x:hidden;
 }
 .container {
@@ -7,7 +7,7 @@ html{
     background-color: #1f2937;
 }
 
-.page-logo {
+#logo {
     display: flex;
     width: 70px;
     height: 70px;
@@ -34,7 +34,7 @@ html{
 background-color: rgb(202, 201, 195);
 color: black;
 }
-.first-pic{
+#image-1{
     display: flex;
     border: 2px;
     margin: 40px;
@@ -105,33 +105,47 @@ button:hover {
 button:active {
     transform: translateY(2px);
 }
-h4{
-    display: flex;
-    justify-content: center;
-}
+
 .mid-part {
     position: absolute;
     top: 80%;
-    left: 40%;
     font-size: 28px;
-}
-.all-pics {
+    background-color: aquamarine;*/
+    width: 100%;
+} 
+
+h4{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+}  
+.pics {
     display: flex;
     flex-direction: row;
     width: 300px;
     height: 300px;
     justify-content: center;
-}     
-img {
-    
-    border: 5px solid rgba(14, 98, 167, 0.924);
-    box-sizing: content-box;
     margin: 20px;
-    border-radius: 25px;
-    align-content: space-around;
+    position: absolute;
+    left: 40%;
     
+
 }
-    
 
-    
+img {
+    border: 4px solid blue;
+    border-radius: 25px;
+    align-content: space-between;
+    margin: 20px;
+}
+.quote {
+    display: flex;
+    flex-direction: row;
+    background-color: #c4cac5;
+    padding: 50px;
+    position: absolute;
+    top: 80%;
 
+}
+/*
