--- a/styles.css
+++ b/styles.css
@@ -1,151 +1,124 @@
-/*html{
-    overflow-y: scroll; overflow-x:hidden;
-}
-.container {
-    display: flex;
-    border: 0px;
+
+.section1 {
+    
+    
     background-color: #1f2937;
-}
+    justify-content: space-between;
+    
 
-#logo {
-    display: flex;
-    width: 70px;
-    height: 70px;
-    border: 2px solid black;
-    padding: 20px;
-    margin: 10px;
 }
-.nav-bar{
+header {
+    display: flex;
+    flex-direction: row;
     width: 100%;
-    margin: 0%;
-}
-.nav-bar a {
-  float: right;
-  color: #f2f2f2;
-  text-align: right;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 20px;
-  
-
+    align-items: center;
+    padding-top: 10px;
+    padding-bottom: 15px;
 
 }
-.nav-bar a:hover{
-background-color: rgb(202, 201, 195);
-color: black;
-}
-#image-1{
-    display: flex;
-    border: 2px;
-    margin: 40px;
-    width: 400px;
-    height: 400px;
-    float: right;
-   padding-top: 70px;
-   padding-bottom: 50px;
-    
-
-}
-h1{
-    font-weight: bold;
-    color:whitesmoke;
-    float: left;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background-color: #614f4f;
-    border-radius: 25px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-h2{
-
-    display: flex;
-    border: 10px;
-    height: 150px;
-    width: 500px;
-    position: absolute;
-    top: 10%;
-    float: left;
-    color: #f9faf8;
-    font-size: 48px;
-    
-
-}
-
-h3{
-    display: flex;
-    border: 10px;
-    height: 100px;
-    width: 550px;
-    position: absolute;
-    top: 30%;
-    float: left;
+.header-logo {
+    padding-left: 100px;
+    font-weight: 700;
+    font-size: 24PX;
     color: #f9faf8;
 }
-button{
-    background-color: #3882f6;
-    color: #f9faf8;
+.header-links {
     
-    font-size: 22px;
-    position:absolute;
-    top: 40%;
-    border: 0px;
-    border-radius: 20px;
-    padding: 10px;
-    float: left;
-    width: 10%;
+    
+    margin-left: auto;
+    
+    
+    
+    
+}
+.header-links a {
+    text-decoration: none;
     cursor: pointer;
-    
-    
+    font-size: 18px;
+    color: #E5E7EB;
+    padding: 15px;
+    margin: 10px;
 
 }
-button:hover {
-    background-color:rgb(202, 201, 195);
+
+.header-links :hover{
+    background-color: #f9faf8;
     color: black;
 }
-button:active {
-    transform: translateY(2px);
+
+    
+}
+
+.section1-text {
+    padding-left: 50px;
+}
+.section1-text1 {
+    color: #f9faf8;
+    font-size: 48px;
+    font-weight: 700;
+    width: 500px;
+    height: 50px;
+    padding-left: 100px;
+    padding-top: 70px;
+  
+}
+.section1-text2 {
+    color: #E5E7EB;
+    font-size: 18px;
+    width: 500px;
+    height: 10px;
+    padding-left: 100px;
+    padding-top: 50px;
+  
+}
+.section1-image {
+    justify-content: right;
+    margin-top: 50px;
+    margin-right: 100px;
+    margin-bottom: 70px;
 }
 
 .mid-part {
-    position: absolute;
-    top: 80%;
-    font-size: 28px;
-    background-color: aquamarine;*/
-    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 } 
 
-h4{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+.section1-button {
+    margin-top: 40px;
+    margin-left: 100px;
     
-}  
-.pics {
-    display: flex;
-    flex-direction: row;
-    width: 300px;
-    height: 300px;
-    justify-content: center;
-    margin: 20px;
-    position: absolute;
-    left: 40%;
+}
+button {
+    background-color: #3882F6;
+    border-radius: 20px;
+    font-size: 20px;
+    color: #f9faf8;
+    cursor: pointer;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+   
+
+}
+button:hover{
+    background-color: #f9faf8;
+    color: black;
+}
+.section2 {
+  
     
-
+    background-color:white;
 }
-
-img {
-    border: 4px solid blue;
-    border-radius: 25px;
-    align-content: space-between;
-    margin: 20px;
+.section3{
+      
+   
+    background-color: #E5E7EB;
 }
-.quote {
-    display: flex;
-    flex-direction: row;
-    background-color: #c4cac5;
-    padding: 50px;
-    position: absolute;
-    top: 80%;
-
+.section4 {
+   
+   
+    background-color: #3882F6;
 }
-/*
+}
