--- a/styles.css
+++ b/styles.css
@@ -159,13 +159,80 @@ button:hover{
 }
 
 .section3{
-      
-   
+    display: flex;
+    
+   justify-content: center;
     background-color: #E5E7EB;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.section4{
+    display: flex;
+    flex-direction: row;
+}
+
+.section4-text {
+    display: flex;
+    flex-direction: row;
+   
+
+}
+.section3-text1 {
+    font-family: italic #1f2937;
+    font-size: 36px;
+    width: 850px;
+    height: 40px;
+    text-align: start;
+
+}
+.section3-text2 {
+    font-size: 26px;
+    margin: 60px;
+    
+    padding-left: 170px;
+    float: right;
+   
+    
+
+
+}
+.section4-box{
+    background-color: white;
+    display: flex;
+    padding: 40px;
+    justify-content: center;
 }
 .section4 {
-   
+    display: flex;
+    flex-direction: row;
+   border-radius: 15px;
+   align-items: center;
    
     background-color: #3882F6;
 }
+.section4-text{
+    display: flex;
+    justify-content: center;
+    
+
+
+}
+.section4-text1 {
+    color: #f9faf8;
+    margin: 50px;
+    padding: left 50px;
+
+}
+.section4-text2 {
+    color: #E5E7EB;
+    margin-top: 70px;
+    
+}
+
+footer {
+    display: flex;
+    color: #f9faf8;
+    justify-content: center;
+    padding: 50px 0px;
+    
 }
