added padding-top (20) t0 section2-text1

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 .section1 {
     
-    
+    flex: 50px;
     background-color: #1f2937;
     justify-content: space-between;
     
@@ -26,7 +26,7 @@ header {
     
     
     margin-left: auto;
-    
+    flex: 50px;
     
     
     
@@ -117,6 +117,7 @@ button:hover{
     font:  #1f2937;
     font-weight: 700;
     font-size: 36px;
+    padding-top: 20px;
 }
 .s2h3 {
     display: flex;
@@ -198,8 +199,9 @@ button:hover{
 .section4-box{
     background-color: white;
     display: flex;
-    padding: 40px;
+    padding: 70px 50px ;
     justify-content: center;
+   
     
 }
 .section4 {
